--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,121 @@
         android:id="@+id/button_readtemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
         android:text="开始读取温度"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#388E3C"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/editText_portspeed"
+        app:layout_constraintHorizontal_bias="0.919"
+        app:layout_constraintStart_toStartOf="@+id/editText_portspeed"
+        app:layout_constraintTop_toBottomOf="@+id/editText_portspeed" />
+
+    <Button
+        android:id="@+id/button_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="摄像头：允许开启"
+        app:layout_constraintBottom_toTopOf="@+id/editText_width"
+        app:layout_constraintEnd_toStartOf="@+id/button_temp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="温度：显示"
+        app:layout_constraintBottom_toBottomOf="@+id/button_camera"
+        app:layout_constraintEnd_toStartOf="@+id/button_speak"
+        app:layout_constraintStart_toEndOf="@+id/button_camera"
+        app:layout_constraintTop_toTopOf="@+id/button_camera" />
+
+    <Button
+        android:id="@+id/button_speak"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="语音播报：是"
+        app:layout_constraintBottom_toBottomOf="@+id/button_temp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_temp"
+        app:layout_constraintTop_toTopOf="@+id/button_temp" />
+
+    <Button
+        android:id="@+id/button_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="保存（重启应用生效）"
+        app:layout_constraintBottom_toBottomOf="@+id/editText_height"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editText_height"
+        app:layout_constraintTop_toTopOf="@+id/editText_height" />
+
+    <EditText
+        android:id="@+id/editText_width"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:ems="10"
+        android:hint="悬浮窗宽：默认300"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/editText_height"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editText_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="高：默认300"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/editText_width"
+        app:layout_constraintEnd_toStartOf="@+id/button_save"
+        app:layout_constraintStart_toEndOf="@+id/editText_width"
+        app:layout_constraintTop_toTopOf="@+id/editText_width" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/sp_rv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="32dp"
+        android:text="串口：默认ttyS3"
+        app:layout_constraintBottom_toTopOf="@+id/editText_portspeed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editText_portspeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:hint="波特率：默认9600"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/textView_sp"
+        app:layout_constraintStart_toStartOf="@+id/textView_sp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_sp" />
+
+    <Button
+        android:id="@+id/button_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="退出应用"
+        android:textColor="#FF3333"
+        app:layout_constraintEnd_toEndOf="@+id/button_readtemp"
+        app:layout_constraintStart_toStartOf="@+id/button_readtemp"
+        app:layout_constraintTop_toBottomOf="@+id/button_readtemp" />
+
 </android.support.constraint.ConstraintLayout>
