--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="摄像头：允许开启"
+        android:text="摄像头：开启"
         app:layout_constraintBottom_toTopOf="@+id/editText_width"
         app:layout_constraintEnd_toStartOf="@+id/button_temp"
         app:layout_constraintStart_toStartOf="parent" />
@@ -45,7 +45,7 @@
         android:id="@+id/button_speak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="语音播报：是"
+        android:text="语音播报：开启"
         app:layout_constraintBottom_toBottomOf="@+id/button_temp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_temp"
@@ -99,7 +99,7 @@
         android:layout_marginTop="90dp"
         android:layout_marginEnd="107dp"
         android:layout_marginBottom="32dp"
-        android:text="串口：默认ttyS3"
+        android:text="串口："
         app:layout_constraintBottom_toTopOf="@+id/editText_portspeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
