除鉴权外全部完成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="保存（重启应用生效）"
+        android:text="保存(重启应用生效)"
         app:layout_constraintBottom_toBottomOf="@+id/editText_height"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText_height"
@@ -67,8 +67,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:ems="10"
+        android:focusedByDefault="false"
         android:hint="悬浮窗宽：默认300"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editText_height"
         app:layout_constraintStart_toStartOf="parent" />
@@ -79,7 +80,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="高：默认300"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/editText_width"
         app:layout_constraintEnd_toStartOf="@+id/button_save"
         app:layout_constraintStart_toEndOf="@+id/editText_width"
@@ -110,8 +111,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:focusedByDefault="false"
         android:hint="波特率：默认9600"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/textView_sp"
         app:layout_constraintStart_toStartOf="@+id/textView_sp"
         app:layout_constraintTop_toBottomOf="@+id/textView_sp" />
