--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,7 +104,7 @@
         android:layout_marginTop="90dp"
         android:layout_marginEnd="107dp"
         android:layout_marginBottom="32dp"
-        android:text="串口："
+        android:text="ttyS3"
         app:layout_constraintBottom_toTopOf="@+id/editText_portspeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
