--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -180,10 +180,11 @@
         android:id="@+id/button_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="重置全部并退出"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
-        tools:layout_editor_absoluteY="533dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/button_lang"
@@ -201,6 +202,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="语言引擎（请选择讯飞）"
+        android:textColor="#D32F2F"
         app:layout_constraintBottom_toTopOf="@+id/button_speak"
         app:layout_constraintEnd_toEndOf="@+id/button_speak"
         app:layout_constraintStart_toStartOf="@+id/button_speak" />
