--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:text="开始读取温度"
+        android:text="@string/start_read"
         android:textColor="#388E3C"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="摄像头：开启"
+        android:text="@string/camera_open"
         app:layout_constraintBottom_toTopOf="@+id/editText_width"
         app:layout_constraintEnd_toStartOf="@+id/button_temp"
         app:layout_constraintStart_toStartOf="parent" />
@@ -38,7 +38,7 @@
         android:id="@+id/button_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="温度：显示"
+        android:text="@string/tp_show"
         app:layout_constraintBottom_toBottomOf="@+id/button_camera"
         app:layout_constraintEnd_toStartOf="@+id/button_speak"
         app:layout_constraintStart_toEndOf="@+id/button_camera"
@@ -48,7 +48,7 @@
         android:id="@+id/button_speak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="语音播报：开启"
+        android:text="@string/speak_open"
         app:layout_constraintBottom_toBottomOf="@+id/button_temp"
         app:layout_constraintEnd_toStartOf="@+id/button_lang"
         app:layout_constraintStart_toEndOf="@+id/button_temp"
@@ -58,7 +58,7 @@
         android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="保存(重启应用生效)"
+        android:text="@string/save_restart_useful"
         app:layout_constraintBottom_toBottomOf="@+id/editText_height"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText_height"
@@ -71,7 +71,7 @@
         android:layout_marginBottom="32dp"
         android:ems="10"
         android:focusedByDefault="false"
-        android:hint="悬浮窗宽：默认300"
+        android:hint="@string/fw_height"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editText_height"
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="高：默认300"
+        android:hint="@string/fw_height"
         android:focusedByDefault="false"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/editText_width"
@@ -116,7 +116,7 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:focusedByDefault="false"
-        android:hint="波特率：默认9600"
+        android:hint="@string/baudrate_9600"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/textView_sp"
         app:layout_constraintStart_toStartOf="@+id/textView_sp"
@@ -127,7 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="退出应用"
+        android:text="@string/exit_app"
         android:textColor="#FF3333"
         app:layout_constraintEnd_toEndOf="@+id/button_readtemp"
         app:layout_constraintStart_toStartOf="@+id/button_readtemp"
@@ -138,7 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="重置悬浮窗位置"
+        android:text="@string/reset_fw_side"
         app:layout_constraintEnd_toEndOf="@+id/button_exit"
         app:layout_constraintStart_toStartOf="@+id/button_exit"
         app:layout_constraintTop_toBottomOf="@+id/button_exit" />
@@ -148,7 +148,7 @@
         android:layout_width="148dp"
         android:layout_height="73dp"
         android:layout_marginTop="32dp"
-        android:text="若调整位置后悬浮窗不显示，则位置位于屏幕外，请重置"
+        android:text="@string/outside_hint"
         app:layout_constraintEnd_toEndOf="@+id/button_restorecamera"
         app:layout_constraintStart_toStartOf="@+id/button_restorecamera"
         app:layout_constraintTop_toBottomOf="@+id/button_restorecamera" />
@@ -181,7 +181,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="重置全部并退出"
+        android:text="@string/reset_and_exit"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -190,7 +190,7 @@
         android:id="@+id/button_lang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="语音语言：中文"
+        android:text="@string/language_chinese"
         app:layout_constraintBottom_toBottomOf="@+id/button_speak"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_speak"
@@ -201,7 +201,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="语音引擎（请选择讯飞）"
+        android:text="@string/choose_xunfei_ui"
         android:textColor="#D32F2F"
         app:layout_constraintBottom_toTopOf="@+id/button_speak"
         app:layout_constraintEnd_toEndOf="@+id/button_speak"
